tests/sumo/output/e3/errors/file_missing/errors.sumo
Error: Attribute 'file' is missing in definition of e3Detector '4/1to3/1'.
Quitting (on error).
